<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SignInLayout"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textStyle="bold"
            android:text="@string/girisyap"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterEnabled="true"
            app:counterMaxLength="35"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            android:layout_marginTop="75dp"
            app:counterTextAppearance="@style/CounterStyle">

            <EditText
                android:id="@+id/et_SignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_giriniz"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:textColor="@color/KayitOlTextColor"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterEnabled="true"
            app:counterMaxLength="35"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            android:layout_marginTop="15dp"
            app:counterTextAppearance="@style/CounterStyle"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_SignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sifre_giriniz"
                android:inputType="textPassword"
                android:maxLength="35"
                android:textColor="@color/KayitOlTextColor"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BtnSignIn"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:text="@string/girisyap"
            android:backgroundTint="#252525"
            android:textColor="@color/KayitOlBtnTextColor"
            android:textStyle="bold"
            >
        </Button>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/GoToRegisterLayoutText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/giris_yap_kayit_ol_bg"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hesabinizYokMu"
            android:textSize="17sp">

        </TextView>

    </RelativeLayout>

</RelativeLayout>